use circ_dist as in Assignment 3

--- a/A4_LogisticRegression/Assignment4.ipynb
+++ b/A4_LogisticRegression/Assignment4.ipynb
@@ -65,16 +65,16 @@
     "df = pd.read_csv(\"https://raw.githubusercontent.com/wimmerlab/MBC-DataAnalysis/main/A3_PsychometricCurves/Experiment1_all_subjects.csv\")\n",
     "\n",
     "# 3. Define a function that takes two angles as input and outputs the angular distance between the two\n",
-    "def circdist_deg(angles1,angles2): #define the name and set the arguments between parentheses\n",
-    "    angle_diff = angles2 - angles1 # simple difference\n",
-    "    angle_diff_rad = angle_diff*np.pi/180 # convert to radians\n",
-    "    angular_dist_rad = np.angle( np.exp(1j*(angle_diff_rad))) ## mathematical operation to get the circular distance (in radians)\n",
-    "    angular_dist = 180/np.pi*angular_dist_rad ## convert back to degrees\n",
-    "    output = np.round(angular_dist) # round value to eliminate numerical imprecisions (all values are integer)\n",
-    "    return output #return the circular distance in degrees \n",
+    "# compute the circular distance between two angles\n",
+    "def circdist(angles1, angles2):  # define the name and set the arguments between parentheses\n",
+    "    angle_diff = angles1 - angles2  # angle difference\n",
+    "    angle_diff = angle_diff  / 180 * np.pi  # convert to radian\n",
+    "    output = np.angle(np.exp(1j * angle_diff))  # mathematical operation to get the circular distance\n",
+    "    output = output / np.pi * 180   # convert back to degrees\n",
+    "    return output  # return the circular distance in degrees \n",
     "\n",
     "# 4. Compute the displacement of the probe from the target and add it as a new column to the dataframe: \n",
-    "df['displacement'] = circdist_deg( df['target'], df['probe'] );"
+    "df['displacement'] = circdist( df['probe'], df['target'] );\n"
    ]
   },
   {
@@ -487,7 +487,7 @@
    "outputs": [],
    "source": [
     "#Compute the distance between the distractor and the target and add as a new column to the dataframe:\n",
-    "df['dist_distractor'] = circdist_deg( df['target'] , df['near'] )\n",
+    "df['dist_distractor'] = circdist( df['near'] , df['target'] )\n",
     "\n",
     "# we now run the GLM with two predictors, displacement and dist_distractor\n",
     "mod = smf.glm(????)\n",
