--- a/A5_ModelComparison/Assignment5.ipynb
+++ b/A5_ModelComparison/Assignment5.ipynb
@@ -1063,7 +1063,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now **compare the AIC from the two models** (again using a bar plot)."
+    "Now **compare the AIC from the two models**."
    ]
   },
   {
