--- a/A7_SpikeTrainAnalysis/Assignment7.ipynb
+++ b/A7_SpikeTrainAnalysis/Assignment7.ipynb
@@ -578,7 +578,7 @@
    ],
    "source": [
     "# Load data from neuron 4\n",
-    "SpikeTimes4 =  np.loadtxt(\"Neuron4_Spike.csv\")\n",
+    "SpikeTimes4 =  np.loadtxt(\"https://raw.githubusercontent.com/wimmerlab/MBC-DataAnalysis/main/A7_SpikeTrainAnalysis/Neuron4_Spike.csv\")\n",
     "\n",
     "# Bin spikes (using same time grid as for neuron 1)\n",
     "SpikeCount4,_ = ??\n",
